// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date Validation should filter the available units for the dd/mm/yyyy 1`] = `
Array [
  "Days",
  "Months",
  "Years",
]
`;

exports[`Date Validation should filter the available units for the mm/yyyy 1`] = `
Array [
  "Months",
  "Years",
]
`;

exports[`Date Validation should filter the available units for the yyyy 1`] = `
Array [
  "Years",
]
`;

exports[`Date Validation should render all units for date range answers 1`] = `
Array [
  "Days",
  "Months",
  "Years",
]
`;

exports[`Date Validation should render disabled message when not enabled 1`] = `
<ValidationView
  data-test="example-test-id"
  enabled={false}
  onToggleChange={[Function]}
>
  <DisabledMessage
    name="Some date"
  />
</ValidationView>
`;

exports[`Date Validation should render metadata and custom for date range type answer 1`] = `
<ValidationPills
  Custom={[Function]}
  Metadata={[Function]}
  entityType="Custom"
  onEntityTypeChange={[Function]}
/>
`;

exports[`Date Validation should render previous answer, metadata, custom and now for date type answer 1`] = `
<ValidationPills
  Custom={[Function]}
  Metadata={[Function]}
  Now={[Function]}
  PreviousAnswer={[Function]}
  entityType="Custom"
  onEntityTypeChange={[Function]}
/>
`;

exports[`Date Validation should render the form input with the values when enabled 1`] = `
<ValidationView
  data-test="example-test-id"
  enabled={true}
  onToggleChange={[Function]}
>
  <div>
    <Grid
      align="top"
      fillHeight={true}
    >
      <AlignedColumn
        cols={3}
      >
        <EmphasisedText>
          Some date
           is
        </EmphasisedText>
      </AlignedColumn>
      <Column
        cols={9}
      >
        <Duration
          duration={
            Object {
              "unit": "Months",
              "value": 5,
            }
          }
          name="offset"
          onChange={[MockFunction]}
          onUpdate={[MockFunction]}
          units={
            Array [
              "Days",
              "Months",
              "Years",
            ]
          }
        />
      </Column>
    </Grid>
    <Grid
      align="top"
      fillHeight={true}
    >
      <Column
        cols={3}
      >
        <DateValidation__ConnectedPath />
      </Column>
    </Grid>
    <Grid
      align="top"
      fillHeight={true}
    >
      <AlignedColumn
        cols={3}
      >
        <DateValidation__RelativePositionSelect
          data-test="relative-position-select"
          name="relativePosition"
          onBlur={[MockFunction]}
          onChange={[MockFunction]}
          value="Before"
        >
          <option
            key="Before"
            value="Before"
          >
            Before
          </option>
          <option
            key="After"
            value="After"
          >
            After
          </option>
        </DateValidation__RelativePositionSelect>
        <Component />
      </AlignedColumn>
      <Column
        cols={9}
      >
        <ValidationPills
          Custom={[Function]}
          Metadata={[Function]}
          Now={[Function]}
          PreviousAnswer={[Function]}
          entityType="Custom"
          onEntityTypeChange={[Function]}
        />
      </Column>
    </Grid>
  </div>
</ValidationView>
`;
